2004-03-06 Bernhard Held <bernhard AT bernhardheld.de>

	* sim/ucsim/configure.in,
	* sim/ucsim/configure,
	* sim/ucsim/doc/Makefile.in: use docdir
	* src/SDCC.y: fixed sbit atrributes
	* src/SDCCast.c (getResultTypeFromType): added support for bitfields
	* src/SDCCast.c (decorateType): |^& need special promotion handling
	* src/SDCCast.h,
	* src/SDCCsymt.h: moved definition of RESULT_TYPE
	* src/SDCCsymt.h (computeType),
	* src/SDCCicode.c: computeType() needs op
	* src/SDCCsymt.c (checkTypeSanity),
	* doc/sddman.lyx: "plain" bitfields are unsigned
	* src/SDCCsymt.c (computeTypeOr): added
	* src/SDCCsymt.c (computeType): added support for bitfields, fixed
	|^& ops
	* src/SDCCval.c (val*): computeType() needs op
	* src/SDCCval.c (valCastLiteral): fixed casting of bitfields
	* support/regression/tests/onebyte.c: added tests for |^&

2004-03-06 Hans Dorn <hjdorn AT users.sourceforge.net>

	* src/pic16/gen.c: (genpic16Code) use copy of printILine's output
	for writing icode into asm output.

2004-03-05 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.c: added some debug lines enabled
	with macro DEBUG_CHECK,
	* src/pic16/genarith.c: more debug in genPlus,
	* (pic16_genUMult8XLit_16, pic16_genUMult8X8_16): removed,
	* (pic16_genUMult16X16_16, pic16_genUMult16XLit_16): NEW,
	* src/pic16/gen.c: added prototypes for pic16_genMult16X16_16,
	* (aopForSym): onStack symbols are re-placed in data memspace,
	and onStack flag is cleared,
	* (pic16_popGetTempReg, pic16_popReleaseTempReg): modified to
	copy temporary pcodeop,
	* (genPcall): added warning for not updating PCLATU,
	* (genFunction): removed test with IFFUNC_CALLEESAVES, its
	always true for pic16 port,
	* (genMultOneWord): NEW, supports integer multiplication,
	* (genMult): modified to call genMultOneWord,
	* (ifxForOp): added warning when return NULL,
	* src/pic16/glue.c (pic16emitRegularMap): symbol implicit
	flag is set before call to operandFromSymbol for implicit
	added structures,