@@ -1,3 +1,11 @@
+2004-03-06 Vangelis Rokas <vrokas AT otenet.gr>
+
+	* src/pic16/ralloc.c (pic16_genPackRegisters): reverted to old
+	version of pic16_genPackRegisters which does not check if ic is a
+	CAST operator,
+	* src/pic16/gen.c (ifxForOp): disabled new and untested code in
+	function cause string1.c regression test fails
+
 2004-03-06 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* sim/ucsim/configure.in,
